# breakinvaders

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  deploy.py  game_data.json  index.html  leaderboard.json  main.py  pygbag.toml  pyproject.toml  requirements.txt  rest_logic.py  run_game.bat  run_game.py  session_data.json  setup.bat  setup.py  weekly_stats.json
docs/: breakinvaders.apk  game.js  game_data.json  index.html  leaderboard.json  manifest.json  sw.js  version.txt
src/: __init__.py  main.py
src/game/: __init__.py  aliens.py  bullets.py  explosion.py  game_manager.py  spaceship.py
src/states/: __init__.py  game_states.py  state_manager.py
src/ui/: __init__.py  button.py  game_ui.py
src/utils/: __init__.py  game_utils.py
